--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.boris.mathpuzzles">
 
     <application
-        android:name=".Global"
+        android:name=".help.Global"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/FullscreenTheme">
@@ -22,34 +22,34 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".NewGame"
+            android:name=".activity.NewGame"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_new_game"
-            android:parentActivityName=".MainActivity"
+            android:parentActivityName=".activity.MainActivity"
             android:theme="@style/FullscreenTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.boris.mathpuzzles.MainActivity" />
+                android:value="com.example.boris.mathpuzzles.activity.MainActivity" />
         </activity>
         <activity
-            android:name=".Game"
+            android:name=".activity.Game"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_game"
-            android:parentActivityName=".NewGame"
+            android:parentActivityName=".activity.NewGame"
             android:theme="@style/FullscreenTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.boris.mathpuzzles.NewGame" />
+                android:value="com.example.boris.mathpuzzles.activity.NewGame" />
         </activity>
         <activity
-            android:name=".Settings"
+            android:name=".activity.Settings"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_settings"
-            android:parentActivityName=".MainActivity"
+            android:parentActivityName=".activity.MainActivity"
             android:theme="@style/FullscreenTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.boris.mathpuzzles.MainActivity" />
+                android:value="com.example.boris.mathpuzzles.activity.MainActivity" />
         </activity>
     </application>
 
