--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".activity.MainMenu"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/FullscreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,17 +26,19 @@
             android:name=".activity.NewGame"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_new_game"
-            android:parentActivityName=".activity.MainActivity"
+            android:parentActivityName=".activity.MainMenu"
+            android:screenOrientation="portrait"
             android:theme="@style/FullscreenTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.boris.mathpuzzles.activity.MainActivity" />
+                android:value="com.example.boris.mathpuzzles.activity.MainMenu" />
         </activity>
         <activity
             android:name=".activity.Game"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_game"
             android:parentActivityName=".activity.NewGame"
+            android:screenOrientation="portrait"
             android:theme="@style/FullscreenTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -45,11 +48,12 @@
             android:name=".activity.Settings"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_settings"
-            android:parentActivityName=".activity.MainActivity"
+            android:parentActivityName=".activity.MainMenu"
+            android:screenOrientation="portrait"
             android:theme="@style/FullscreenTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.boris.mathpuzzles.activity.MainActivity" />
+                android:value="com.example.boris.mathpuzzles.activity.MainMenu" />
         </activity>
     </application>
 
