--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.boris.mathpuzzles">
+    package="com.thejokerstudios.mathpuzzles">
 
     <application
         android:name=".help.Global"
@@ -31,7 +31,7 @@
             android:theme="@style/FullscreenTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.boris.mathpuzzles.activity.MainMenu" />
+                android:value="com.thejokerstudios.mathpuzzles.activity.MainMenu" />
         </activity>
         <activity
             android:name=".activity.Game"
@@ -42,7 +42,7 @@
             android:theme="@style/FullscreenTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.boris.mathpuzzles.activity.NewGame" />
+                android:value="com.thejokerstudios.mathpuzzles.activity.NewGame" />
         </activity>
         <activity
             android:name=".activity.Settings"
@@ -53,7 +53,7 @@
             android:theme="@style/FullscreenTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.boris.mathpuzzles.activity.MainMenu" />
+                android:value="com.thejokerstudios.mathpuzzles.activity.MainMenu" />
         </activity>
     </application>
 
